--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'com.google.guava:guava:26.0-jre'
+    implementation 'com.google.guava:guava:30.0-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.2'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: '3.0.2'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
